# quak

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_NOTICES.md
android/: gradlew  gradlew.bat  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/acoto87/quak/: QuakActivity.java
android/app/src/main/res/values/: strings.xml  styles.xml
assets/shaders/opengl/: lit.frag  lit.vert  tex.frag  tex.vert  unlit.frag  unlit.vert  water.frag  water.vert
assets/shaders/spirv/: lit.frag.spv  lit.vert.spv  particle.frag.spv  particle.vert.spv  shadow.frag.spv  shadow.vert.spv  tex.frag.spv  tex.vert.spv  unlit.vert.spv  water.frag.spv  water.vert.spv
shaders/dxil/: common.hlsl  lit.frag.hlsl  lit.vert.hlsl  particle.frag.hlsl  particle.vert.hlsl  shadow.frag.hlsl  shadow.vert.hlsl  tex.frag.hlsl  tex.vert.hlsl  unlit.frag.hlsl  unlit.vert.hlsl  water.frag.hlsl  water.vert.hlsl
src/: activities.c  activities.h  assets.c  assets.h  audio.c  audio.h  duck.c  duck.h  duck_animation.c  duck_animation.h  game.c  game.h  input.c  input.h  interaction.c  interaction.h  main.c  pond_objects.c  pond_objects.h  render.c  render.h  types.h
tests/: test_audio.c  test_game.c  test_interaction.c
tools/: compile_spirv.ps1
tools/SDL3_shadercross-3.0.0-windows-VC-x64/cmake/: SDL3_shadercross-shared-targets.cmake  SDL3_shadercross-static-targets.cmake
tools/SDL3_shadercross-3.0.0-windows-VC-x64/lib/: SDL3_shadercross-static.lib  SDL3_shadercross.lib
